Entrega Proyecto Final

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -69,6 +69,9 @@
                 </h1>
                 <div id="carrito-container">
                 </div>
+                <button id="borrarCarritoButton" class="btn btn-danger" title="Borrar carrito">
+                    <img src="../multimedia/icons/trash.png" alt="Borrar carrito">
+                  </button>
             </div>
         </section>
     </main>
@@ -118,6 +121,8 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
         <script src="../cart.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </body>
 
 </html>
